# bitops

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  ecm.yaml
include/bo/: c.h  cxx.hpp
include/bo/c/: intrin.h  portable.h
test/: main-cxx.cpp  main.c  rand.h  shared_tests.h  testing.h
